--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Welcome to Scatland</title>
+		<title>Welcome to Awesomeland</title>
 		<link href=''>
 		<link href='styles.css'>
 		<script src='splashtxt.lua'/>
