--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<hr>
 		<h1>Welcome to AWESOMELAND!</h1>
-		<h2 class='splashtxt'>The splash text is broken... Aw man</h2>
+		<p class='splashtxt'>The splash text is broken... Aw man</p>
 		<hr>
 		<p>I'm Hi</p>
 	</body>
