--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 		<h1>Welcome to AWESOMELAND!</h1>
 		<p class='splashtxt'>The splash text is broken... Aw man</p>
 		<hr>
-		<p>I'm Hi</p>
+		<h2>What is This</h2>
+		<p>Awesomeland</p>
+		<hr>
+		<button>Click to see absolutely nothing happen</button><br>
+		<input placeholder='This text box does nothing.'>
 	</body>
 </html>
