--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Welcome to Awesomeland</title>
-		<link href=''>
+		<link href='https://tr.rbxcdn.com/30DAY-AvatarHeadshot-94AAD08EE20FE188BD4F05A69995C930-Png/150/150/AvatarHeadshot/Png/noFilter'>
 		<link href='styles.css'>
 		<script src='splashtxt.lua'/>
 	</head>
@@ -15,5 +15,6 @@
 		<hr>
 		<button>Click to see absolutely nothing happen</button><br>
 		<input placeholder='This text box does nothing.'>
+		<img src='https://tr.rbxcdn.com/30DAY-AvatarHeadshot-94AAD08EE20FE188BD4F05A69995C930-Png/150/150/AvatarHeadshot/Png/noFilter'>
 	</body>
 </html>
