--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
 	<head>
 		<title>Welcome to Awesomeland</title>
-		<link href='https://tr.rbxcdn.com/30DAY-AvatarHeadshot-94AAD08EE20FE188BD4F05A69995C930-Png/150/150/AvatarHeadshot/Png/noFilter'>
 		<link href='styles.css'>
 		<script src='splashtxt.lua'/>
 	</head>
@@ -10,11 +9,18 @@
 		<h1>Welcome to AWESOMELAND!</h1>
 		<p class='splashtxt'>The splash text is broken... Aw man</p>
 		<hr>
-		<h2>What is This</h2>
-		<p>Awesomeland</p>
+		<h2>AWESOMELAND attractions!!!!!!!!!!</h2>
 		<hr>
-		<button>Click to see absolutely nothing happen</button><br>
-		<input placeholder='This text box does nothing.'>
-		<img src='https://tr.rbxcdn.com/30DAY-AvatarHeadshot-94AAD08EE20FE188BD4F05A69995C930-Png/150/150/AvatarHeadshot/Png/noFilter'>
+		<h4>Calculator!!!</h4>
+		<p>
+			<input class='x'>
+			<select>
+				<option value='add'>+</option>
+				<option value='subtract'>-</option>
+				<option value='multiply'>*</option>
+				<option value='divide'>/</option>
+			</select>
+			<input class='y'>
+		</p>
 	</body>
 </html>
