--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<h2>AWESOMELAND attractions!!!!!!!!!!</h2>
 		<hr>
 		<h4>Calculator!!!</h4>
-		<p>
+		<p class='nolinebreak'>
 			<input class='x'>
 			<select>
 				<option value='add'>+</option>
