--- a/index.html
+++ b/index.html
@@ -12,15 +12,13 @@
 		<h2>AWESOMELAND attractions!!!!!!!!!!</h2>
 		<hr>
 		<h4>Calculator!!!</h4>
-		<p class='nolinebreak'>
-			<input class='x'>
-			<select>
-				<option value='add'>+</option>
-				<option value='subtract'>-</option>
-				<option value='multiply'>*</option>
-				<option value='divide'>/</option>
-			</select>
-			<input class='y'>
-		</p>
+		<input class='x'>
+		<select>
+			<option value='add'>plus</option>
+			<option value='subtract'>minus</option>
+			<option value='multiply'>multiplied by</option>
+			<option value='divide'>divided by</option>
+		</select>
+		<input class='y'>
 	</body>
 </html>
