--- a/index.html
+++ b/index.html
@@ -12,13 +12,6 @@
 		<h2>AWESOMELAND attractions!!!!!!!!!!</h2>
 		<hr>
 		<h4>Calculator!!!</h4>
-		<input class='x'>
-		<select>
-			<option value='add'>plus</option>
-			<option value='subtract'>minus</option>
-			<option value='multiply'>multiplied by</option>
-			<option value='divide'>divided by</option>
-		</select>
-		<input class='y'>
+		<input class='x'><select><option value='add'>plus</option><option value='subtract'>minus</option><option value='multiply'>multiplied by</option><option value='divide'>divided by</option></select><input class='y'>
 	</body>
 </html>
