--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 		<hr>
 		<h2>AWESOMELAND attractions!!!!!!!!!!</h2>
 		<hr>
-		<h4>Calculator!!!</h4>
-		<input class='calculator' placeholder='1+1'><button>Calculate</button>
+		<h4>idk :tro</h4>
 	</body>
 </html>
